--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,78 @@
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    list-style: none;
+}
 
+.nav-bar {
+    background-color: white;
+    position: sticky;
+    top:0;
+    flex: auto;
+    padding: 5px 10px;
+    height: 75px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    column-gap: 30px;
+    border: 1px solid black;
+}
+
+nav div.button{
+    text-transform: uppercase;
+    font-size: medium;
+    color: brown;
+}
+
+.nav-bar div img{
+    height: 75px;
+    width: 75px;
+}
+
+.nav-bar .gymName h3{
+    text-transform: uppercase;
+    font-family: 'Times New Roman', Times, serif;
+    margin: 10px 20px;
+}
+
+.nav-bar .gymName h4{
+    margin: 0px 10px;
+
+}
+/* background */
+
+main .pimage1{
+    box-sizing: border-box;
+    background-image:url(/Images/BackgroundPic1.png);
+    height: 1080px;
+    margin-bottom: 10px;
+}
+main .pimage2{
+    box-sizing: border-box;
+    background-image:url(/Images/BackgroundPic2.png);
+    height: 1080px;
+    margin-bottom: 10px;
+}
+main .pimage1 .text{
+    color: red;
+}
+
+footer{
+    background-color: black;
+    border: 1px solid red;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    column-gap: 30px;
+}
+
+footer .add{
+    color: rgb(106, 229, 227);
+    display: flex;
+    box-sizing: border-box;
+    flex-direction: row;
+}
+
+footer .add .icon{
+    background-color: aliceblue;
+}
