--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body{
     background-color: black;
 }
 
-.nav-bar {
+/* .nav-bar {
     background-color: white;
     position: sticky;
     top:0;
@@ -18,6 +18,31 @@ body{
     align-items: center;
     flex-direction: row;
     column-gap: 30px;
+} */
+
+nav ul{
+    background-color: white;
+}
+
+nav ul li img{
+    margin-top: 5px;
+    width: 75px;
+    height: 75px;
+}
+nav ul li{
+    display: inline;
+    color: black;
+    font-size: larger;
+    font-weight: 600;
+}
+
+.nav-bar-new{
+    display: flex;
+    flex-direction: row;
+    column-gap: 40px;
+    text-align: center;
+    align-items: center;
+    text-transform: uppercase;
 }
 
 nav div.button{
@@ -42,24 +67,44 @@ nav div.button{
     margin: 0px 10px;
 }
 /* background */
-/* main{
-    display: flex;
-    flex-direction: column;
-    flex: auto;
-
-} */
 
 main .pimage1{
     box-sizing: border-box;
     background-image:url(/Images/BackgroundPic1.png);
     height: 1080px;
+}
+
+.registration {
+    background-color: black;
+    color: orangered;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.inputfeild{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    column-gap: 20px;
     margin-bottom: 10px;
 }
+
+input[type="email"]{
+    margin-left: 20px;
+}
+ 
+input[type="submit"]{
+    width: 260px;
+} 
+
 main .pimage2{
     box-sizing: border-box;
     background-image:url(/Images/BackgroundPic2.png);
     height: 1080px;
-    margin-bottom: 10px;
 }
 
 /* main .pimage1{
@@ -83,6 +128,13 @@ main .pimage2{
 main .pimage1 .text{
     color: rgb(255, 64, 0);
 }
+
+.registration{
+    color: rgb(255, 64, 0);
+    text-align: center;
+}
+
+
 
 footer{
     background-color: black;
@@ -135,6 +187,8 @@ ul{
 
 .displayPosition div a img{
     padding-right: 10px;
+    width: 35px;
+    height: 35px;
 }
 
 .address.location{
@@ -156,6 +210,7 @@ ul{
 }
 
 .copyrights .pageEnd div{
+    margin-top: 20px;
     color: white;
     margin-bottom: 20px;
 }
